# Phasor

./: .clang-format  .clang-format-ignore  .clang-tidy  .clang-tidy-ignore  .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CONTRIBUTING  CONTRIBUTING.md  Doxyfile  EULA  LICENSE  LICENSE.runtime  PKGBUILD  PKGBUILD-main  PKGBUILD.git  PKGBUILD.main  README.md  SECURITY.md  build.phs  build.zig  cargo.toml  directory_code_pack.txt  dist_linux.sh  flake.nix  license  outfile.txt  phasor.cloc  phasor.install  pmake-bootstrap.bat  pmake-bootstrap.py  pmake-bootstrap.sh  pmake.phs  pmake.tracelog  project.pmake
examples/FFI/CXX/: CMakeLists.txt
examples/FFI/CXX/src/: ffi.cpp
src/Codegen/: CMakeLists.txt  CodeGen.cpp  CodeGen.hpp  README.md  phsb_disasm.py
src/Codegen/Bytecode/: BytecodeDeserializer.cpp  BytecodeDeserializer.hpp  BytecodeSerializer.cpp  BytecodeSerializer.hpp  metadata.h
src/Codegen/Cpp/: CppCodeGenerator.cpp  CppCodeGenerator.hpp
src/Codegen/IR/: PhasorIR.cpp  PhasorIR.hpp
src/Codegen/PhasorStruct/: PhasorStruct.hpp
src/Compiler/: CMakeLists.txt  README.md
src/Compiler/Phasor/: Compiler.cpp  Compiler.hpp  CppCompiler.cpp  CppCompiler.hpp
src/Compiler/Pulsar/: Compiler.cpp  Compiler.hpp
src/Compiler/Shared/: Assembler.cpp  Assembler.hpp  Disassembler.cpp  Disassembler.hpp
src/Executable/: CMakeLists.txt  README
src/Executable/Bindings/macOS/: main.c
src/Executable/Bindings/posix/: main.c
src/Executable/Bindings/sdl2/: sdl2_main.cpp
src/Executable/Bindings/win32/: bindgen_main.cpp  main.rc
src/Executable/Compiler/Phasor/: Compiler.rc  Compiler_main.cpp  CppCompiler.rc  CppCompiler_main.cpp
src/Executable/Compiler/Pulsar/: Compiler.rc  Compiler_main.cpp
src/Executable/Compiler/Shared/: Assembler.rc  Assembler_main.cpp  Disassembler.rc  Disassembler_main.cpp
src/Executable/Help/: CMakeLists.txt  main.phs  phasor_help.phs  phasor_help.rc  phasor_help_main.cpp
src/Executable/LSP/Phasor/: LSP.rc  LSP_main.cpp
src/Executable/Main/Phasor/: Phasor.rc  Phasor_main.cpp
src/Executable/Repl/Phasor/: Repl.rc  Repl_main.cpp
src/Executable/Runtime/Phasor/: NativeRuntimeDll.rc  NativeRuntimeExe.rc  NativeRuntime_dynamic_main.cpp  NativeRuntime_library.cpp  NativeRuntime_static_main.cpp  ScriptingRuntime.rc  ScriptingRuntime_main.cpp
src/Executable/Runtime/Pulsar/: ScriptingRuntime.rc  ScriptingRuntime_main.cpp
src/Executable/Runtime/Shared/: BinaryRuntime.rc  BinaryRuntime_main.cpp  NativeRuntimeDll.rc  NativeRuntimeExe.rc  NativeRuntime_com.cpp  NativeRuntime_com.hpp  NativeRuntime_dynamic_main.cpp  NativeRuntime_library.cpp  NativeRuntime_static_main.cpp
src/Executable/utils/: CMakeLists.txt  Shell.rc
src/Executable/utils/Shell/: CMakeLists.txt  Shell.rc  shell_main.cpp
src/Executable/utils/coreutils/: CMakeLists.txt  coreutils_main.in.cpp  ls.rc
src/Executable/utils/pmake/: CMakeLists.txt
src/Extensions/py/phasor/: Bytecode.py  Deserializer.py  Instruction.py  Metadata.py  Native.py  OpCode.py  README.md  Runtime.py  Serializer.py  Value.py  __init__.py  pyproject.toml
src/Frontend/: CMakeLists.txt  Frontend.cpp  Frontend.hpp  README.md
src/Frontend/Phasor/: Frontend.cpp  Frontend.hpp
src/Frontend/Pulsar/: Frontend.cpp  Frontend.hpp
src/Language/: CMakeLists.txt  README.md
src/Language/Phasor/Lexer/: Lexer.cpp  Lexer.hpp
src/Language/Phasor/Parser/: Parser.cpp  Parser.hpp
src/Language/Pulsar/Lexer/: Lexer.cpp  Lexer.hpp
src/Language/Pulsar/Parser/: Parser.cpp  Parser.hpp
src/Runtime/: CMakeLists.txt  Runtime.cpp  Value.hpp  pch.hpp
src/Runtime/FFI/: CMakeLists.txt  api.cpp  ffi.cpp  ffi.hpp
src/Runtime/Meta/: interpreter.cpp  interpreter.hpp  interpreter_help.cpp  interpreter_io.cpp  interpreter_stdlibmap.cpp
src/Runtime/Meta/api/: api.h  api_extras.cpp
src/Runtime/Meta/repl/: build.conf
src/Runtime/Meta/repl/src/: main.phs
src/Runtime/Meta/stdlib/: std_file.cpp  std_fs.cpp  std_math.cpp  std_string.cpp  std_sys.cpp  stdlib.h
src/Runtime/Modules/: CMakeLists.txt  ModuleLoader.cpp  ModuleLoader.hpp
src/Runtime/Phasor/: NativeRuntime.cpp  NativeRuntime.hpp  ScriptingRuntime.cpp  ScriptingRuntime.hpp
src/Runtime/Pulsar/: ScriptingRuntime.cpp  ScriptingRuntime.hpp
src/Runtime/Shared/: BinaryRuntime.cpp  BinaryRuntime.hpp  NativeRuntime.cpp  NativeRuntime.hpp
src/Runtime/Stdlib/: CMakeLists.txt  StdLib.cpp  StdLib.hpp  array.cpp  file.cpp  io.cpp  math.cpp  memory.cpp  meta.cpp  random.cpp  regex.cpp  string.cpp  system.cpp  typeconv.cpp
src/Runtime/Stdlib/core/: file_properties.c  file_properties.h  random.cpp  random.hpp  system.c  system.h
src/Runtime/Stdlib/phasor/: stdarray.phs  stdfile.phs  stdio.phs  stdmain.phs  stdmath.phs  stdmem.phs  stdmeta.phs  stdrand.phs  stdsmain.phs  stdstr.phs  stdsys.phs  stdtype.phs
src/Runtime/Stdlib/phasor/extra/: conemu.phs  progressbar.phs
src/Runtime/Stdlib/phs/include/std/: array.phs  file.phs  io.phs  main.phs  mem.phs  meta.phs  rand.phs  sys.phs  (+1 more)
src/Runtime/Stdlib/windows/: vhandle.cpp  vhandle.hpp  winType.cpp  winType.hpp  windows.cpp  windows.hpp  winuser.cpp  winuser.hpp
src/Runtime/VM/: Array.cpp  CMakeLists.txt  Native.cpp  Operations.cc.inl  Operations.cpp  Register.cpp  Runtime.cpp  Runtime.hpp  Stack.cpp  Utility.cpp  VM.cpp  VM.hpp  Variables.cpp
src/Runtime/VM/JIT/: PhasorJIT.cpp  PhasorJIT.hpp  shims.hpp
src/Runtime/VM/core/: core.h
src/Runtime/VM/core/IO/: IO.c  IO.h  bsd_x86_64.s  crt.c  darwin_bsd_aarch64.s  darwin_bsd_x86_64.s  linux_aarch64.s  linux_x86_64.s  windows_aarch64.asm  windows_x86_64.asm
src/Runtime/VM/core/arithmetic/: arithmetic.h  bsd_x86_64.s  crt.c  darwin_bsd_aarch64.s  darwin_bsd_x86_64.s  linux_aarch64.s  linux_x86_64.s  windows_aarch64.asm  windows_x86_64.asm
src/Runtime/VM/core/logical/: bsd_x86_64.s  crt.c  darwin_bsd_aarch64.s  darwin_bsd_x86_64.s  linux_aarch64.s  linux_x86_64.s  logical.h  windows_aarch64.asm  windows_x86_64.asm
src/Runtime/VM/core/native/: arithmetic.h  logical.h
src/Runtime/VM/core/portable/: IO.c  IO.h
(+394 files in other folders)
